# ai-consultant

./: README.md  chat.py  consultant.prompt  pyproject.toml
agent/: detector.py  llm.py  shell.py
isolation_env/python/: Dockerfile
tests/: conftest.py
tests/agent/: test_detector.py
